# geo-bullseye

./: README.md  setup.cfg  setup.py  tox.ini
src/app/: main.py
src/app/routers/: coordinates.py  users.py
src/domain/: models.py  polygons.py  projections.py  schemas.py  users.py
src/infra/: database.py  models.py
