[metadata]
name = geo_bullseye
version = attr: geo_bullseye.0.0.1
author = Juan Cortés 
description = Find coordinates in a set of polygons.
long_description = file: README.md 
logn_description_content_type = text/markdown
keywords = geojson polygon coordinates geospatial
project_urls =
    Source code = https://github.com/juangcr/geo-bullseye
license = GPL-3.0
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*

[options.extras_require]
test =
    coverage
    pytest
    black
    flake8
    mypy
